force-app/main/default/objects/blng__RevenueTransaction__c/blng__RevenueTransaction__c.object-meta.xml
<CustomObject>
    <customHelpPage>blng__revenueTransactionHelp</customHelpPage>
    <label>Revenue Transaction</label>
    <nameField>
        <displayFormat>RT-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>