force-app/main/default/objects/blng__RevenueTransaction__c/fields/LCPR_IDCreche__c.field-meta.xml
<CustomField>
    <fullName>LCPR_IDCreche__c</fullName>
    <formula>blng__InvoiceLine__r.LPCR_Creche__r.LCPR_IDCompteCreche__c</formula>
    <label>ID de la creche</label>
    <type>Text</type>
</CustomField>