force-app/main/default/objects/blng__RevenueTransaction__c/fields/LCPR_PCA__c.field-meta.xml
<CustomField>
    <fullName>LCPR_PCA__c</fullName>
    <formula>blng__RevenueAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>