force-app/main/default/objects/blng__RevenueTransaction__c/fields/LPCR_Amount__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Amount__c</fullName>
    <label>Montant</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>