force-app/main/default/objects/blng__RevenueTransaction__c/fields/LPCR_CATheorique__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CATheorique__c</fullName>
    <formula>blng__PreviouslyRecognizedRevenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA Théorique</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>