force-app/main/default/objects/blng__RevenueTransaction__c/fields/LPCR_CompteAnalytiqueClient__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CompteAnalytiqueClient__c</fullName>
    <formula>blng__InvoiceLine__r.LPCR_Creche__r.LCPR_CompteAnalytiqueClient__c</formula>
    <label>Compte Analytique du Client</label>
    <type>Text</type>
</CustomField>