force-app/main/default/objects/blng__RevenueTransaction__c/fields/LPCR_Creche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Creche__c</fullName>
    <formula>blng__InvoiceLine__r.LPCR_Creche__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creche</label>
    <type>Text</type>
</CustomField>