force-app/main/default/objects/blng__RevenueTransaction__c/fields/LPCR_DateDebut__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateDebut__c</fullName>
    <formula>blng__InvoiceLine__r.blng__OrderProduct__r.ServiceDate</formula>
    <label>Date de Debut</label>
    <type>Date</type>
</CustomField>