force-app/main/default/objects/blng__RevenueTransaction__c/fields/LPCR_DateFin__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateFin__c</fullName>
    <formula>blng__InvoiceLine__r.blng__OrderProduct__r.EndDate</formula>
    <label>Date de Fin</label>
    <type>Date</type>
</CustomField>