force-app/main/default/objects/blng__RevenueTransaction__c/fields/LPCR_Facture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Facture__c</fullName>
    <formula>blng__PreviouslyRecognizedRevenue__c +blng__RevenueAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facturé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>