force-app/main/default/objects/blng__RevenueTransaction__c/fields/LPCR_FAE__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FAE__c</fullName>
    <formula>blng__DeferredBalance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FAE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>