force-app/main/default/objects/blng__RevenueTransaction__c/fields/LPCR_FrequenceFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FrequenceFacturation__c</fullName>
    <formula>Text( blng__InvoiceLine__r.blng__OrderProduct__r.SBQQ__BillingFrequency__c )</formula>
    <label>Frequence Facturation</label>
    <type>Text</type>
</CustomField>