force-app/main/default/objects/blng__RevenueTransaction__c/fields/LPCR_MontantBascule__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MontantBascule__c</fullName>
    <formula>IF( blng__OrderProduct__r.Order.LPCR_InitAutoAvecDateDebut__c = false, LPCR_Amount__c , blng__RevenueAmount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>