force-app/main/default/objects/blng__RevenueTransaction__c/fields/LPCR_NombreMois__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombreMois__c</fullName>
    <formula>LEFT(blng__RevenueFinancePeriod__r.Name, 8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Mois</label>
    <type>Text</type>
</CustomField>