force-app/main/default/objects/blng__RevenueTransaction__c/fields/LPCR_NombrePlaces__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NombrePlaces__c</fullName>
    <formula>IF( CONTAINS( blng__InvoiceLine__r.Name, &quot;Berceau&quot;), blng__InvoiceLine__r.blng__OrderProduct__r.Quantity, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Places</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>