force-app/main/default/objects/blng__RevenueTransaction__c/fields/LPCR_NomClient__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NomClient__c</fullName>
    <formula>blng__InvoiceLine__r.blng__Invoice__r.blng__Account__r.Name</formula>
    <label>Nom du Client</label>
    <type>Text</type>
</CustomField>