force-app/main/default/objects/blng__RevenueTransaction__c/fields/LPCR_NumeroDevis__c.field-meta.xml
<CustomField>
    <fullName>LPCR_NumeroDevis__c</fullName>
    <formula>name</formula>
    <label>Numero de Devis</label>
    <type>Text</type>
</CustomField>