force-app/main/default/objects/blng__RevenueTransaction__c/fields/LPCR_PrixAnnuel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrixAnnuel__c</fullName>
    <formula>blng__RevenueSchedule__r.blng__TotalRevenueAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix Annuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>