force-app/main/default/objects/blng__RevenueTransaction__c/fields/LPCR_PrixUnitaireBerceau__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PrixUnitaireBerceau__c</fullName>
    <formula>blng__InvoiceLine__r.blng__OrderProduct__r.blng__BillableUnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix Unitaire du Berceaux</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>