force-app/main/default/objects/blng__RevenueTransaction__c/fields/LPCR_SocieteFacture__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SocieteFacture__c</fullName>
    <formula>blng__LegalEntity__r.Name</formula>
    <label>Société qui Facture</label>
    <type>Text</type>
</CustomField>