force-app/main/default/objects/blng__RevenueTransaction__c/fields/LPCR_TypeFacturation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeFacturation__c</fullName>
    <formula>TEXT( blng__InvoiceLine__r.blng__OrderProduct__r.SBQQ__BillingType__c )</formula>
    <label>Type Facturation</label>
    <type>Text</type>
</CustomField>